fix the edges when blurring

--- a/05_Blurry_Loading/style.css
+++ b/05_Blurry_Loading/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Unbantu:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap');
 
 * {
     /* include the padding and border in an element's total width and height. */
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Unbantu', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     display: flex;
     /* main-axis */
     /* flex-direction: column; */
@@ -19,24 +19,33 @@ body {
     margin: 0;
 }
 
-.container {
-    position: relative;
-}
 
 .bg-image {
+    /* fix the edges when blurring */
+    position: absolute;
+    top: -30px;
+    left: -30px;
+    width: calc(100vw + 60px);
+    height: calc(100vh + 60px);
+
+    /* position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw; */
+
     background: url('https://images.unsplash.com/photo-1665457652244-c989a9f908ea?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80') no-repeat;
     background-size: cover;
-    height: 100vh;
-    width: 100vw;
+    background-position: center;
     filter: blur(0px);
     z-index: -100;
 }
 
 .loading-status {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transition: translate(-50%, -50%);
+    transition: translate(-50%, -50%); */
     font-size: 36px;
     color: white
 }
